add unit test for coroutines