@@ -37,6 +37,19 @@ android {
     buildFeatures {
         dataBinding = true
     }
+
+    tasks.withType(Test) {
+        useJUnitPlatform()
+    //    jvmArgs '--enable-preview'
+    }
+    tasks.withType(Test) {
+        testLogging {
+            exceptionFormat "full"
+            events "started", "skipped", "passed", "failed"
+            showStandardStreams true
+        }
+    }
+
 }
 
 dependencies {
@@ -48,14 +61,25 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    //Unit Testing
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'androidx.arch.core:core-testing:2.1.0'
+    //androidTestImplementation 'androidx.test:rules:1.4.0'
+    //androidTestImplementation 'androidx.test:runner:1.4.0'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.1'
+    //testImplementation "org.junit.jupiter:junit-jupiter-api:5.6.0"
+    //testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.6.0"
+    //testImplementation 'org.junit.jupiter:junit-jupiter:5.6.0'
+
+    //MockK
+    testImplementation "io.mockk:mockk:1.9.3.kotlin12"
+    testImplementation "org.mockito:mockito-core:3.4.6"
+
     // Optional -- Robolectric environment
     testImplementation 'androidx.test:core:1.4.0'
-    // Optional -- Mockito framework
-    testImplementation "org.mockito:mockito-core:2.23.0"
 
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
 
@@ -63,13 +87,9 @@ dependencies {
     testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
     androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
 
-    //MockK
-    testImplementation 'android.arch.core:core-testing:1.1.1'
-    testImplementation "io.mockk:mockk:1.9.3.kotlin12"
-
     //Retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.6.1'
-    implementation 'com.squareup.retrofit2:converter-gson:2.6.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.1.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
 
@@ -130,7 +150,7 @@ dependencies {
 
     //Room Database
     implementation "androidx.room:room-runtime:$room_version"
- //   annotationProcessor "androidx.room:room-compiler:$room_version"
+    //   annotationProcessor "androidx.room:room-compiler:$room_version"
 
     kapt "androidx.room:room-compiler:$room_version"
 
